[package]
name = "stats-overlay"
version = "0.1.0"
description = "An overlay for the statistics of your system and other sources"
authors = ["you"]
license = "Apache-2.0"
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.19", features = [] }

[dependencies]
fern = { version = "0.6.2", features = ["colored"] }
humantime = "2.1.0"
log = "0.4.21"
platform-dirs = "0.3.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tauri = { version = "2.0.0-beta.24", features = ["devtools", "tray-icon"] }
tauri-plugin-autostart = "2.0.0-beta.9"
tauri-plugin-shell = "2.0.0-beta.9"

[dependencies.windows]
version = "0.57.0"
features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"]
